# poetry-demo

./: .env  .gitignore  Dockerfile  docker-compose.yaml  main.py  manage.py  pyproject.toml
api/: __init__.py  blueprints.py
api/database/: __init__.py
api/exceptions/: __init__.py
api/helpers/: decorators.py
api/models/: user_models.py
api/repositories/: __init__.py  user_repository.py
api/resources/: user_resources.py
api/schemas/: user_schemas.py
tests/: conftest.py  test_poetry_demo.py
