[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Thiago Pacheco <thiagodelimapacheco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
Flask-SQLAlchemy = "^2.5.1"
marshmallow = "^3.13.0"
marshmallow-sqlalchemy = "^0.26.1"
Flask-Script = "^2.0.6"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"
Flask-Migrate = "^3.1.0"
gunicorn = "^20.1.0"
flask-marshmallow = "^0.14.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
